--- a/index.html
+++ b/index.html
@@ -33,7 +33,53 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
-    <h1>Hello Green Eearth</h1>
+  <body class="bg-[#f0fdf4] h-screen">
+    <!-- nav -->
+    <header>
+      <nav class="bg-[#15803d]">
+        <div
+          class="flex justify-between items-center w-11/12 mx-auto text-white py-5"
+        >
+          <h2 class="font-semibold text-lg">Green Earth</h2>
+          <div class="flex gap-5 text-sm font-light">
+            <p>About</p>
+            <p>Gallery</p>
+            <p>Plant a Tree</p>
+          </div>
+          <button
+            class="btn rounded-4xl bg-[#facc15] border-none text-[#15803d]"
+          >
+            Plant a Tree
+          </button>
+        </div>
+      </nav>
+    </header>
+
+    <!-- banner -->
+    <section class="bg-[#cff0dc]">
+      <!-- section container -->
+      <div class="flex justify-between items-center">
+        <!-- leaf 1 -->
+        <div><img src="./assets/hero-leaf1.png" alt="" class=""/></div>
+        <!-- middle text -->
+        <div class="text-center md:space-y-5">
+          <h1 class="font-bold md:text-5xl">Plant a Tree, Grow a Future</h1>
+          <p class="text-gray-500 md:px-20 text-xs md:text-base">
+            Join our mission to plant 1 million trees and make the Earth greener
+            for future generations.
+          </p>
+          <button
+            class="btn rounded-4xl bg-[#facc15] border-none text-[#15803d]"
+          >
+            Plant a Tree
+          </button>
+        </div>
+        <!-- leaf 2 -->
+        <div><img src="./assets/hero-leaf2.png" alt="" class=""/></div>
+      </div>
+    </section>
+
+    <!-- javascript -->
+    <script src="./script.js"></script>
   </body>
 </html>
