--- a/index.html
+++ b/index.html
@@ -87,24 +87,42 @@
         </h2>
         <!-- our trees container -->
         <div class="grid grid-cols-12 gap-10 w-11/12 mx-auto">
-          <aside class=" col-span-2">
+          <aside class="col-span-2">
             <!-- categories -->
-              <div class="">
-                <ul
-                  class="menu w-full"
+            <div class="">
+              <ul class="menu w-full">
+                <!-- Sidebar content here -->
+                <h2 class="font-bold text-2xl mb-2">Categories</h2>
+                <li
+                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
                 >
-                  <!-- Sidebar content here -->
-                   <h2 class="font-bold text-2xl mb-2">Categories</h2>
-                  <li class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"><a>All Trees</a></li>
-                  <li class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"><a>All Trees</a></li>
-                  <li class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"><a>All Trees</a></li>
-                  <li class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"><a>All Trees</a></li>
-                  <li class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"><a>All Trees</a></li>
-                </ul>
-              </div>
+                  <a>All Trees</a>
+                </li>
+                <li
+                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
+                >
+                  <a>All Trees</a>
+                </li>
+                <li
+                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
+                >
+                  <a>All Trees</a>
+                </li>
+                <li
+                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
+                >
+                  <a>All Trees</a>
+                </li>
+                <li
+                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
+                >
+                  <a>All Trees</a>
+                </li>
+              </ul>
+            </div>
           </aside>
           <!-- card container -->
-          <div class="col-span-8 grid grid-cols-3 gap-10">
+          <div class="col-span-7 grid grid-cols-3 gap-10">
             <!-- card 1 -->
             <div class="card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
@@ -141,7 +159,7 @@
                 </div>
               </div>
             </div>
-            
+
             <div class="card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
                 <img
@@ -249,7 +267,27 @@
             </div>
           </div>
 
-          <aside class="border col-span-2"></aside>
+          <!-- cart right -->
+          <aside class="rounded-2xl col-span-2 bg-white p-3">
+            <h2 class="font-semibold text-2xl my-2">Your Cart</h2>
+            <!-- cart card -->
+            <div
+              class="bg-[#f0fdf4] p-3 rounded-xl flex justify-between items-center"
+            >
+              <div>
+                <h2 class="font-medium text-lg">Mango Tree</h2>
+                <p class="text-xl text-gray-500">
+                  $ <span>500</span> x <span>1</span>
+                </p>
+              </div>
+              <p class="text-gray-500 text-xl">x</p>
+            </div>
+
+            <div class="flex justify-between items-center mt-3">
+              <h2 class="font-medium text-lg">Total</h2>
+              <p class="font-medium text-lg">$ <span>1000</span></p>
+            </div>
+          </aside>
         </div>
       </section>
     </main>
