capmaign section created

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
           </aside>
           <!-- card container -->
-          <div class="col-span-7 grid grid-cols-3 gap-10">
+          <div class="col-span-8 grid grid-cols-3 gap-10">
             <!-- card 1 -->
             <div class="card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
@@ -288,6 +288,40 @@
               <p class="font-medium text-lg">$ <span>1000</span></p>
             </div>
           </aside>
+        </div>
+      </section>
+
+      <!-- about campaign -->
+
+      <section class="bg-[#f0fdf4] pb-10">
+        <h2 class="text-center font-bold text-3xl py-5 pt-16">
+          About The Campaign
+        </h2>
+        <div class="grid grid-cols-12 gap-10 w-11/12 mx-auto">
+          <div class="col-span-2"></div>
+
+          <div class="col-span-8 flex justify-between items-center">
+            <figure class="w-1/2">
+              <img src="./assets/about.png" alt="" class="rounded-xl" />
+            </figure>
+
+            <div class="w-1/2 text-lg">
+              <p class="text-gray-600">
+                Green Earth is a global tree plantation initiative dedicated to
+                fighting climate change. Since our start, we’ve planted over
+                500,000 trees worldwide. By joining our campaign, you help
+                restore forests, create habitats for wildlife, and combat global
+                warming.
+              </p>
+              <ul class="list-disc text-gray-600 mt-5">
+                <li>Restoration of natural habitats</li>
+                <li>Improvement of air quality</li>
+                <li>Support for local communities</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-span-2"></div>
         </div>
       </section>
     </main>
