resoponsive our impact section created

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
     <main>
       <!-- choose our trees -->
       <section class="bg-[#f0fdf4]">
-        <h2 class="md:text-3xl text-2xl font-bold md:mt-20 m-8 mb-3 text-center">
+        <h2
+          class="md:text-3xl text-2xl font-bold md:mt-20 m-8 mb-3 text-center"
+        >
           Choose Our Trees
         </h2>
         <!-- our trees container -->
@@ -375,7 +377,6 @@
           <div class="col-span-2"></div>
 
           <div class="md:col-span-8 md:flex justify-between items-center">
-
             <!-- campaign left -->
             <figure class="md:w-1/2">
               <img src="./assets/about.png" alt="" class="rounded-xl" />
@@ -399,6 +400,41 @@
           </div>
 
           <div class="col-span-2"></div>
+        </div>
+      </section>
+
+      <!-- Our Impact -->
+      <section class="bg-[#cff0dc]">
+        <div class="w-11/12 mx-auto">
+          <h2
+            class="text-center py-5 pt-10 font-bold text-2xl md:text-3xl mb-6"
+          >
+            Our Impact
+          </h2>
+
+          <!-- our impact container -->
+          <div
+            class="container md:flex justify-between gap-10 pb-20 mx-auto space-y-5 md:space-y-0"
+          >
+            <div class="bg-white py-10 w-full rounded-2xl">
+              <p class="text-center text-3xl font-medium text-[#15803d]">
+                500K+
+              </p>
+              <p class="text-center text-gray-600">Trees Planted</p>
+            </div>
+
+            <div class="bg-white py-10 w-full rounded-2xl">
+              <p class="text-center text-3xl font-medium text-[#15803d]">
+                120+
+              </p>
+              <p class="text-center text-gray-600">Communities Involved</p>
+            </div>
+
+            <div class="bg-white py-10 w-full rounded-2xl">
+              <p class="text-center text-3xl font-medium text-[#15803d]">30+</p>
+              <p class="text-center text-gray-600">Countries Reached</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
