responsive form added

--- a/index.html
+++ b/index.html
@@ -437,7 +437,48 @@
           </div>
         </div>
       </section>
+
+      <!-- plant a tree form -->
+      <section class="bg-[#166534] py-10">
+        <h2 class="text-white font-bold md:text-3xl text-center pt-5">
+          Plant a Tree Today
+        </h2>
+        <div class="mx-auto flex justify-center py-5">
+          <fieldset
+            class="fieldset border-none rounded-xl bg-[#15803d] rounded-box md:w-[500px] w-96 border p-10 space-y-2"
+          >
+            <input type="text" class="input w-full" placeholder="Your Name" />
+
+            <input
+              type="email"
+              class="input w-full"
+              placeholder="Your Email Address"
+            />
+
+            <select
+              name=""
+              id=""
+              class="bg-white border-none p-3 w-full rounded-lg"
+            >
+              <option value="" class="">Number of Trees</option>
+            </select>
+
+            <button
+              class="btn bg-[#facc15] border-none text-[#15803d] mt-4 rounded-3xl"
+            >
+              Donate Now
+            </button>
+          </fieldset>
+        </div>
+        <!-- form  -->
+      </section>
     </main>
+
+    <footer
+      class="bg-[#14532d] text-center text-white p-6 font-light flex items-center justify-center"
+    >
+      <p>&copy; 2025 Green Earth. All Rights Reserved.</p>
+    </footer>
 
     <!-- javascript -->
     <script src="./script.js"></script>
