dynamic tree categories added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Green Earth</title>
 
+    <!-- fav icon -->
+    <link rel="shortcut icon" href="./assets/hero-leaf1.png" type="image/x-icon">
+
     <!-- css link -->
     <link rel="stylesheet" href="./style.css" />
 
@@ -92,29 +95,9 @@
           <aside class="md:col-span-2 border">
             <!-- categories -->
             <div class="">
-              <ul class="menu w-full">
+              <h2 class="font-bold text-2xl mb-2">Categories</h2>
+              <ul id="all-categories-container" class="menu w-full">
                 <!-- Sidebar content here -->
-                <h2 class="font-bold text-2xl mb-2">Categories</h2>
-                <li
-                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
-                >
-                  <a>All Trees</a>
-                </li>
-                <li
-                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
-                >
-                  <a>All Trees</a>
-                </li>
-                <li
-                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
-                >
-                  <a>All Trees</a>
-                </li>
-                <li
-                  class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
-                >
-                  <a>All Trees</a>
-                </li>
                 <li
                   class="hover:bg-[#15803d] hover:text-white rounded-lg text-lg"
                 >
