dynamic fruit category added

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
           </aside>
           <!-- card container -->
-          <div class="md:col-span-8 grid md:grid-cols-3 gap-10">
+          <div id="card-container" class="md:col-span-8 grid md:grid-cols-3 gap-10">
             <!-- card 1 -->
             <div class="card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
