--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         </h2>
         <!-- our trees container -->
         <div class="grid md:grid-cols-12 gap-10 w-11/12 mx-auto">
-          <aside class="md:col-span-2 border">
+          <aside class="md:col-span-2">
             <!-- categories -->
             <div class="">
-              <h2 class="font-bold text-2xl mb-2">Categories</h2>
+              <h2 class="font-bold text-2xl mb-2 pl-3">Categories</h2>
               <ul id="all-categories-container" class="menu w-full">
                 <!-- Sidebar content here -->
               </ul>
@@ -450,6 +450,14 @@
         </div>
         <!-- form  -->
       </section>
+
+
+
+      <!-- modal -->
+      <!-- You can open the modal using ID.showModal() method -->
+      <dialog id="my_modal_3" class="modal">
+        
+      </dialog>
     </main>
 
     <footer
