dynamic add to cart functionality added with removing feature. only for fruit tree

--- a/index.html
+++ b/index.html
@@ -322,20 +322,14 @@
           </div>
 
           <!-- cart right -->
-          <aside class="rounded-2xl md:col-span-2 bg-white p-3 border">
+          <aside class="rounded-2xl md:col-span-2 bg-white p-3">
             <h2 class="font-semibold text-2xl my-2">Your Cart</h2>
             <!-- cart card -->
-            <div
-              class="bg-[#f0fdf4] p-3 rounded-xl flex justify-between items-center"
-            >
-              <div>
-                <h2 class="font-medium text-lg">Mango Tree</h2>
-                <p class="text-xl text-gray-500">
-                  $ <span>500</span> x <span>1</span>
-                </p>
+              <div id="cart-card-container"  class=" p-3 rounded-xl space-y-3 ">
+                <!-- card st -->
+
+                <!-- card end -->
               </div>
-              <p class="text-gray-500 text-xl">x</p>
-            </div>
 
             <div class="flex justify-between items-center mt-3">
               <h2 class="font-medium text-lg">Total</h2>
