total price calculate feature added

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             </div>
           </aside>
           <!-- card container -->
-          <div id="card-container" class="md:col-span-8 grid md:grid-cols-3 gap-10">
+          <div id="card-container" class=" md:col-span-8 grid md:grid-cols-3 gap-10">
             <!-- card 1 -->
-            <div class="card bg-base-100 shadow-sm rounded-xl p-5">
+            <div class="hidden card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
                 <img
                   src="https://i.ibb.co.com/cSQdg7tf/mango-min.jpg"
@@ -140,7 +140,7 @@
               </div>
             </div>
 
-            <div class="card bg-base-100 shadow-sm rounded-xl p-5">
+            <div class="hidden card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
                 <img
                   src="https://i.ibb.co.com/cSQdg7tf/mango-min.jpg"
@@ -176,7 +176,7 @@
               </div>
             </div>
 
-            <div class="card bg-base-100 shadow-sm rounded-xl p-5">
+            <div class="hidden card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
                 <img
                   src="https://i.ibb.co.com/cSQdg7tf/mango-min.jpg"
@@ -212,7 +212,7 @@
               </div>
             </div>
 
-            <div class="card bg-base-100 shadow-sm rounded-xl p-5">
+            <div class="hidden card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
                 <img
                   src="https://i.ibb.co.com/cSQdg7tf/mango-min.jpg"
@@ -248,7 +248,7 @@
               </div>
             </div>
 
-            <div class="card bg-base-100 shadow-sm rounded-xl p-5">
+            <div class="hidden card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
                 <img
                   src="https://i.ibb.co.com/cSQdg7tf/mango-min.jpg"
@@ -284,7 +284,7 @@
               </div>
             </div>
 
-            <div class="card bg-base-100 shadow-sm rounded-xl p-5">
+            <div class="hidden card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
                 <img
                   src="https://i.ibb.co.com/cSQdg7tf/mango-min.jpg"
@@ -333,7 +333,7 @@
 
             <div class="flex justify-between items-center mt-3">
               <h2 class="font-medium text-lg">Total</h2>
-              <p class="font-medium text-lg">$ <span>1000</span></p>
+              <p class="font-medium text-lg">$ <span id="total-default-price">1000</span></p>
             </div>
           </aside>
         </div>
