--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Green Earth</title>
 
     <!-- fav icon -->
-    <link rel="shortcut icon" href="./assets/hero-leaf1.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/hero-leaf1.png"
+      type="image/x-icon"
+    />
 
     <!-- css link -->
     <link rel="stylesheet" href="./style.css" />
@@ -102,7 +106,10 @@
             </div>
           </aside>
           <!-- card container -->
-          <div id="card-container" class=" md:col-span-8 grid md:grid-cols-3 gap-10">
+          <div
+            id="card-container"
+            class="md:col-span-8 grid md:grid-cols-3 gap-10"
+          >
             <!-- card 1 -->
             <div class="hidden card bg-base-100 shadow-sm rounded-xl p-5">
               <figure class="rounded-xl h-[250px]">
@@ -325,15 +332,17 @@
           <aside class="rounded-2xl md:col-span-2 bg-white p-3">
             <h2 class="font-semibold text-2xl my-2">Your Cart</h2>
             <!-- cart card -->
-              <div id="cart-card-container"  class=" p-3 rounded-xl space-y-3 ">
-                <!-- card st -->
+            <div id="cart-card-container" class="p-3 rounded-xl space-y-3">
+              <!-- card st -->
 
-                <!-- card end -->
-              </div>
+              <!-- card end -->
+            </div>
 
             <div class="flex justify-between items-center mt-3">
               <h2 class="font-medium text-lg">Total</h2>
-              <p class="font-medium text-lg">$ <span id="total-default-price">0</span></p>
+              <p class="font-medium text-lg">
+                $ <span id="total-default-price">0</span>
+              </p>
             </div>
           </aside>
         </div>
@@ -445,13 +454,9 @@
         <!-- form  -->
       </section>
 
-
-
       <!-- modal -->
       <!-- You can open the modal using ID.showModal() method -->
-      <dialog id="my_modal_3" class="modal">
-        
-      </dialog>
+      <dialog id="my_modal_3" class="modal"></dialog>
     </main>
 
     <footer
